--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project("GameEngine")
 add_subdirectory("Source")
 
 # Include tests in the build process.
+enable_testing()
 add_subdirectory("Tests")
 
 # Include examples in the build process.
