--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -30,6 +30,8 @@ set(INCLUDE_FILES
     "Common/ScopeGuard.hpp"
     "Common/Utility.hpp"
 
+    "Events/Delegate.hpp"
+
     "Logger/Logger.hpp"
     "Logger/Message.hpp"
     "Logger/Sink.hpp"
