--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -32,6 +32,8 @@ set(INCLUDE_FILES
 
     "Events/Delegate.hpp"
     "Events/Collector.hpp"
+    "Events/Dispatcher.hpp"
+    "Events/Receiver.hpp"
 
     "Logger/Logger.hpp"
     "Logger/Message.hpp"
