Collect version control information for engine repository and project repository as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,10 +104,9 @@ find_package("Git")
 
 add_custom_target("Configure"
     COMMAND ${CMAKE_COMMAND}
-        -D BUILD_DIR="${CMAKE_CURRENT_BINARY_DIR}"
-        -D INCLUDE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/Include"
-        -D SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/Source"
         -D GIT_EXECUTABLE="${GIT_EXECUTABLE}"
+        -D ENGINE_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
+        -D PROJECT_DIR="${CMAKE_SOURCE_DIR}"
         -D INPUT_FILE="${CMAKE_CURRENT_SOURCE_DIR}/Source/Config/BuildInfo.hpp.in"
         -D OUTPUT_FILE="${CMAKE_CURRENT_BINARY_DIR}/Source/Config/BuildInfo.hpp"
         -P "${CMAKE_CURRENT_SOURCE_DIR}/Source/Config/BuildInfo.cmake"
@@ -151,11 +150,11 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     
     # Use precompiled header for quicker compilation of static headers.
     set_source_files_properties(${SOURCE_FILES} PROPERTIES
-        COMPILE_FLAGS "/Yu\"Precompiled.hpp\" /Fp\"${CMAKE_CURRENT_BINARY_DIR}/Source/Precompiled.pch\""
+        COMPILE_FLAGS "/Yu\"Precompiled.hpp\" /Fp\"${CMAKE_CURRENT_BINARY_DIR}/Source/Precompiled-${CMAKE_BUILD_TYPE}.pch\""
     )
 
     set_source_files_properties("Source/Precompiled.cpp" PROPERTIES
-        COMPILE_FLAGS "/Yc\"Precompiled.hpp\" /Fp\"${CMAKE_CURRENT_BINARY_DIR}/Source/Precompiled.pch\""
+        COMPILE_FLAGS "/Yc\"Precompiled.hpp\" /Fp\"${CMAKE_CURRENT_BINARY_DIR}/Source/Precompiled-${CMAKE_BUILD_TYPE}.pch\""
     )
 endif()
 
